--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Big Ideas Final Project
-City Metric: ?
+City Metric: Most Healthy Town in ALleghany County (By looking at unhealthy data)
 Datasets:
   Kyle - ALlegheny County Fast Food Establishments (https://data.wprdc.org/dataset/allegheny-county-fast-food)
+  Nate - Obesity Rates in ALleghany County
+  Casey - Fish Fry Places bc City in Alleghany County
