--- a/README
+++ b/README
@@ -2,5 +2,5 @@ Big Ideas Final Project
 City Metric: Most Healthy Town in ALleghany County (By looking at unhealthy data)
 Datasets:
   Kyle - ALlegheny County Fast Food Establishments (https://data.wprdc.org/dataset/allegheny-county-fast-food)
-  Nate - Obesity Rates in ALleghany County
+  Nate - Obesity Rates in ALleghany County (https://data.wprdc.org/dataset/allegheny-county-obesity-rates)
   Casey - Fish Fry Places bc City in Alleghany County
