--- a/README
+++ b/README
@@ -3,4 +3,4 @@ City Metric: Most Healthy Town in ALleghany County (By looking at unhealthy data
 Datasets:
   Kyle - ALlegheny County Fast Food Establishments (https://data.wprdc.org/dataset/allegheny-county-fast-food)
   Nate - Obesity Rates in ALleghany County (https://data.wprdc.org/dataset/allegheny-county-obesity-rates)
-  Casey - Fish Fry Places bc City in Alleghany County
+  Casey - Allegheny County Supermarkets (https://data.wprdc.org/datastore/dump/112a3821-334d-4f3f-ab40-4de1220b1a0a)
