Last push didn't work

--- a/SupermarketsAnalysis.ipynb
+++ b/SupermarketsAnalysis.ipynb
@@ -560,14 +560,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**As shown in the graph, it's really difficult to extract this data from a ba"
+    "**As shown in the graph, it's really difficult to extract this data from a bar graph, which is why we should look for other options.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Instead, we're going to plot the locations of the markets on a shape file of Pittsbugh that was provided by the lecture notes. I've shown the file below.**"
+    "**As a potential solution to this, we're going to plot the locations of the markets on a shape file of Pittsbugh that was provided by the lecture notes. I've shown the file below.**"
    ]
   },
   {
