Added a bunch of stuff to final presentation notebook

--- a/fastFoodData.ipynb
+++ b/fastFoodData.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,17 +60,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "you can also see on the second line of that code, I had to use ``.astype(str)`` on the data in the ZIP Code column of ``fast_food``.\n",
+    "You can also see on the second line of that code, I had to use ``.astype(str)`` on the data in the ZIP Code column of ``fast_food``.\n",
     "\n",
     "This is because on the map file (We will see this soon), the zip code data was stored differently. This type casting allows me to now use both dataset's zip codes togther."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kyle\\AppData\\Local\\Temp\\ipykernel_3740\\2400857200.py:7: MatplotlibDeprecationWarning: Unable to determine Axes to steal space for Colorbar. Using gca(), but will raise in the future. Either provide the *cax* argument to use as the Axes for the Colorbar, provide the *ax* argument to steal space from it, or add *mappable* to an Axes.\n",
+      "C:\\Users\\Kyle\\AppData\\Local\\Temp\\ipykernel_24256\\2400857200.py:7: MatplotlibDeprecationWarning: Unable to determine Axes to steal space for Colorbar. Using gca(), but will raise in the future. Either provide the *cax* argument to use as the Axes for the Colorbar, provide the *ax* argument to steal space from it, or add *mappable* to an Axes.\n",
       "  cbar = fig.colorbar(sm, shrink=.75) #shrinking it\n"
      ]
     },
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -231,37 +232,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ZIP Code\n",
-       "15146    51\n",
-       "15222    46\n",
-       "15237    44\n",
-       "15213    38\n",
-       "15205    36\n",
-       "15219    27\n",
-       "15236    25\n",
-       "15235    22\n",
-       "15102    21\n",
-       "15217    20\n",
-       "Name: Name, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bottom_zips.head(10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -269,7 +239,7 @@
     "    10. 15217 - Pittsburgh (Squirrel Hill)\n",
     "    9. 15102 - Bethel Park\n",
     "    8. 15235 - Penn Hills\n",
-    "    7. 15236 - West MIfflin\n",
+    "    7. 15236 - West Mifflin\n",
     "    6. 15219 - Pittsburgh (Hill District)\n",
     "    5. 15205 - Pittsburgh (Crafton)\n",
     "    4. 15213 - Oakland\n",
@@ -282,9 +252,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this data, Monroeville is the town with the most fast food restaurants. However, it did not beat out the rest by much.\n",
+    "From this data, we can see that our top few towns are mostly out of Pittsburgh. Narrowing our data, here is our top 5 towns/neighborhoods:\n",
     "\n",
-    "All of these places offer a wide variety of restaurants to choose from, making these all great canidates for the best town in Alleghany County."
+    "1. Strip District\n",
+    "2. Oakland\n",
+    "3. Hill Disrict\n",
+    "4. Squirrel Hill\n",
+    "\n",
+    "While Monroeville and McKnight offer plenty of options for food, they are out of our desired scope. Using this data, lets go take a look at how this compares to the supermarket data."
    ]
   }
  ],
