--- a/README
+++ b/README
@@ -1,13 +1,17 @@
-Big Ideas Final Project
-
 This repo stores all of our files for our final project, including jupyter notebooks, shapes files, and csv files.
 
-City Metric: Best Town In Pittsburgh Based on Food Availibility
+Team Name: Top Hatters
+
+City Metric: Best Town In Pittsburgh Based on Food and Food Availibility
+
 Datasets:
+
   Kyle - ALlegheny County Fast Food Establishments (https://data.wprdc.org/dataset/allegheny-county-fast-food)
     -Email: kpb42@pitt.edu
     -Notebook: fastFoodData.ipynb
     -Data Description: Lists all fast food establishments by zip code, name, address, etc.
+    
   Nate - Obesity Rates in ALleghany County (https://data.wprdc.org/dataset/allegheny-county-obesity-rates)
+  
   Casey - Allegheny County Supermarkets (https://data.wprdc.org/datastore/dump/112a3821-334d-4f3f-ab40-4de1220b1a0a)
     -Notebook: SupermarketsAnalysis.ipynb
