Added conclusion to my data

--- a/FinalAnalysis.ipynb
+++ b/FinalAnalysis.ipynb
@@ -112,6 +112,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data Conclusion\n",
+    "This dataset offered a lot of great information about fast food establishments in Alleghany County. While it was not the most focused to Pittsburgh, it still porvided plenty of useful information regarding fast food/restaurant availibilty in and around Pittsburgh. As well, it was fairly simple to use with a shape file of the city, as both contained zip code information. Overall, this dataset was a great addition to our project."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# [3. Alleghany County Obesity Rates]()\n",
     "by Nate Quigley"
    ]
