--- a/README
+++ b/README
@@ -12,6 +12,7 @@ Datasets:
     -Data Description: Lists all fast food establishments by zip code, name, address, etc.
     
   Nate - Allegheny County Farmers Markets Locations (https://data.wprdc.org/dataset/allegheny-county-farmers-markets-locations-2017)
+  -Notebook: FarmersMarkets.ipynb
   
   Casey - Allegheny County Supermarkets (https://data.wprdc.org/datastore/dump/112a3821-334d-4f3f-ab40-4de1220b1a0a)
     -Notebook: SupermarketsAnalysis.ipynb
