Fixed some spelling

--- a/FinalAnalysis.ipynb
+++ b/FinalAnalysis.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What may seem to be a rather mundane metric, food and food availibilty in Alleghany county is more interesting than it seems. Our metric involves measuring how availible food is in every town, as well as the quality of said food based on obesity statistics. We came up with this metric after finding multiple datasets dealing with food availiblty by zip code/county. As well, the obesity statistics of Alleghany County also proved to be an interesting factor when compared to our other datasets. For our datasets, we have choosen 3 that represent our metric best:"
+    "What may seem to be a rather mundane metric, food and food availibilty in Alleghany county is more interesting than it seems. Our metric involves measuring how availible food is in every town, using data from grocery stores to fast food. We came up with this metric after finding multiple datasets dealing with food availiblty by zip code/county."
    ]
   },
   {
@@ -43,9 +43,9 @@
    "metadata": {},
    "source": [
     "### Datsets:\n",
-    "1. [Supermarkets/Convenience Stores in Allegany County](https://data.wprdc.org/dataset/allegheny-county-fast-food) - used for supermarket availibilty\n",
-    "2. [Fast Food Establishments in Alleghany County](https://data.wprdc.org/dataset/allegheny-county-fast-food) - used for fast food availibility\n",
-    "3. [Obesity Rates in Alleghany County](https://data.wprdc.org/dataset/allegheny-county-obesity-rates) - used for food quality"
+    "1. [Supermarkets/Convenience Stores in Allegeny County](https://data.wprdc.org/dataset/allegheny-county-fast-food)\n",
+    "2. [Fast Food Establishments in Allegheny County](https://data.wprdc.org/dataset/allegheny-county-fast-food)\n",
+    "3. [Farmers Markets In Allegheny County]()"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [3. Alleghany County Obesity Rates]()\n",
+    "# [3. Alleghany County Obesity Rates](./FarmersMarkerts.ipynb)\n",
     "by Nate Quigley"
    ]
   }
