--- a/FinalAnalysis.ipynb
+++ b/FinalAnalysis.ipynb
@@ -117,11 +117,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Results\n",
+    "\n",
+    "1. Point Breeze North\n",
+    "2. Point Breeze\n",
+    "3. Homewood West\n",
+    "4. Homewood South\n",
+    "\n",
+    "All four of these locations are in the same vicinity of each other, and compared to the first data set above, Point Breeze seems to appear a second time, while for this specific data set, Point Breeze North claims the most Farmer's Market options."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Conclusion\n",
+    "\n",
+    "The dataset on farmers markets in Pittsburgh provided me with valuable information on the distribution of fresh food across different neighborhoods. Using this dataset, I was able to identify the neighborhoods with the highest concentration of farmers markets, which helped me to determine the neighborhoods with the best food availability, hence higher food quality."
+   ]
   }
  ],
  "metadata": {
@@ -140,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
