--- a/FinalAnalysis.ipynb
+++ b/FinalAnalysis.ipynb
@@ -112,12 +112,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [3. Alleghany County Obesity Rates](./FarmersMarkerts.ipynb)\n",
+    "# [3. Alleghany Farmers Markets](./FarmersMarkerts.ipynb)\n",
     "By: Nate Quigley"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,13 +131,41 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Data Conclusion\n",
     "\n",
     "The dataset on farmers markets in Pittsburgh provided me with valuable information on the distribution of fresh food across different neighborhoods. Using this dataset, I was able to identify the neighborhoods with the highest concentration of farmers markets, which helped me to determine the neighborhoods with the best food availability, hence higher food quality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overarching Metric\n",
+    "\n",
+    "Our overall metric is food quality per neighboorhood, which is a composite ranking of the three subrankings. To properly quantify this, the intersection of all our metrics can be taken. This will allow neighboorhoods with all factors to be prioritized, as every metric is important to the overall food quality in a given area. In the event that neighboorhoods have the same amount of intersections, the rankings within the lists they occured on will be taken into account as a tie breaker."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "1. Shadyside\n",
+    "2. Point Breeze\n",
+    "3. Squirrel Hill"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Conclusion\n",
+    "\n",
+    "The overall composite rankings yeild interesting results. While it would be assumed that the more developed downtown areas of Pittsburgh would provide the greatest diversity of food options, it is actually the more suburban areas such as Shadyside and Squirrel Hill. Downtown had a plethora of fast food options, but markets in general appear to be consintrated outside the urban centers. This is a good indication of why Pittsburgh's suberbs are so diserable for both young adults and families alike, as they provide far superior food options to the rest of the Pittsburgh area."
    ]
   }
  ],
@@ -158,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
