Straight up didn't spell Allegheny right once

--- a/FinalAnalysis.ipynb
+++ b/FinalAnalysis.ipynb
@@ -9,14 +9,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Food is what brings all people together. It is the driving force of energy, happiness, and life. Without food, we are nothing.\n",
     "\n",
-    "Our project today deals with exactly that: food. Specifically, food in Alleghany County.\n",
+    "Our project today deals with exactly that: food. Specifically, food in Allegheny County.\n",
     "\n",
-    "Coming into this project, we did had no idea what our metric was going to be. After being inspired by a dataset about Fish Fry Locations in Alleghany County, our group went down the rabit hole of food-adjacent datasets to found on the WPRDC. After finding some compelling data and interesting datasets, we figured out what best meant to us. Our metric for the best town is Pittsburgh is:"
+    "Coming into this project, we did had no idea what our metric was going to be. After being inspired by a dataset about Fish Fry Locations in Allegheny County, our group went down the rabit hole of food-adjacent datasets to found on the WPRDC. After finding some compelling data and interesting datasets, we figured out what best meant to us. Our metric for the best town is Pittsburgh is:"
    ]
   },
   {
@@ -27,10 +28,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What may seem to be a rather mundane metric, food and food availibilty in Alleghany county is more interesting than it seems. Our metric involves measuring how availible food is in every town, using data from grocery stores to fast food. We came up with this metric after finding multiple datasets dealing with food availiblty by zip code/county."
+    "What may seem to be a rather mundane metric, food and food availibilty in Allegheny county is more interesting than it seems. Our metric involves measuring how availible food is in every town, using data from grocery stores to fast food. We came up with this metric after finding multiple datasets dealing with food availiblty by zip code/county."
    ]
   },
   {
@@ -59,6 +61,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,14 +76,15 @@
     "Each of these either contains the greatest number of supermarkets, or is in close proximity to markets in neighboring neighborhoods. Due to the wide availability in these neighborhoods, they came out on top in the supermarket metric. \n",
     "\n",
     "## Data Conclusion\n",
-    "This data set provided a vast amount of information on all food facilities in Alleghany County. This provided the ability to extract any relevant data from the set, in this case information regarding supermarkets. Not only did the data provide an accurate reflection of Pittsburgh, but the extensive details it provided allowed for insightful conclusions to be drawn. "
+    "This data set provided a vast amount of information on all food facilities in Allegheny County. This provided the ability to extract any relevant data from the set, in this case information regarding supermarkets. Not only did the data provide an accurate reflection of Pittsburgh, but the extensive details it provided allowed for insightful conclusions to be drawn. "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [2. Alleghany County Fast Food Establishments](./fastFoodData.ipynb)\n",
+    "# [2. Allegheny County Fast Food Establishments](./fastFoodData.ipynb)\n",
     "By: Kyle Bello"
    ]
   },
@@ -94,9 +98,9 @@
     "\n",
     "While we would like the best, most delicious food much of the time, sometimes we just need food... *fast*.\n",
     "\n",
-    "To find the best town in Pittsburgh, I examined the data from [this survey](https://data.wprdc.org/dataset/allegheny-county-fast-food) of fast food restaurants by zip code conducted by Alleghany County.\n",
+    "To find the best town in Pittsburgh, I examined the data from [this survey](https://data.wprdc.org/dataset/allegheny-county-fast-food) of fast food restaurants by zip code conducted by Allegheny County.\n",
     "\n",
-    "The survey took data from all zip codes in Alleghany County by name, including smaller fast food places as well as chains."
+    "The survey took data from all zip codes in Allegheny County by name, including smaller fast food places as well as chains."
    ]
   },
   {
@@ -474,18 +478,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Data Conclusion\n",
-    "This dataset offered a lot of great information about fast food establishments in Alleghany County. While it was not the most focused to Pittsburgh, it still porvided plenty of useful information regarding fast food/restaurant availibilty in and around Pittsburgh. As well, it was fairly simple to use with a shape file of the city, as both contained zip code information. Overall, this dataset was a great addition to our project."
+    "This dataset offered a lot of great information about fast food establishments in Allegheny County. While it was not the most focused to Pittsburgh, it still porvided plenty of useful information regarding fast food/restaurant availibilty in and around Pittsburgh. As well, it was fairly simple to use with a shape file of the city, as both contained zip code information. Overall, this dataset was a great addition to our project."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [3. Alleghany Farmers Markets](./FarmersMarkerts.ipynb)\n",
+    "# [3. Allegheny Farmers Markets](./FarmersMarkerts.ipynb)\n",
     "By: Nate Quigley"
    ]
   },
