--- a/README
+++ b/README
@@ -8,17 +8,17 @@ City Metric: Best Town In Pittsburgh Based on Food and Food Availibility
 
 Datasets:
 
-  Kyle - ALlegheny County Fast Food Establishments (https://data.wprdc.org/dataset/allegheny-county-fast-food)
+  Kyle (HeyKile) - ALlegheny County Fast Food Establishments (https://data.wprdc.org/dataset/allegheny-county-fast-food)
     -Email: kpb42@pitt.edu
     -Notebook: fastFoodData.ipynb
     -Data Description: Lists all fast food establishments by zip code, name, address, etc.
     
-  Nate - Allegheny County Farmers Markets Locations (https://data.wprdc.org/dataset/allegheny-county-farmers-markets-locations-2017)
+  Nate (natequigley) - Allegheny County Farmers Markets Locations (https://data.wprdc.org/dataset/allegheny-county-farmers-markets-locations-2017)
   -Email: nbq1@pitt.edu
   -Notebook: FarmersMarkets.ipynb
   - Data Description: Lists all Farmer's Markets by name, coordinates, address, zip code, etc.
   
-  Casey - Allegheny County Supermarkets (https://data.wprdc.org/dataset/allegheny-county-supermarkets-convenience-stores)
+  Casey (CaseyDinan)- Allegheny County Supermarkets (https://data.wprdc.org/dataset/allegheny-county-supermarkets-convenience-stores)
     -Email: cdd43@pitt.edu
     -Notebook: SupermarketsAnalysis.ipynb
     -Data Description: Lists all food facilities by municipality, type, seating, address, etc.
